2011-02-25  Murray Cumming  <murrayc@murrayc.com>

	Adapt to libgdamm API change.

	* glom/libglom/connectionpool.cc:
	* glom/libglom/db_utils.cc: Adapt to the libgdamm change to use vector 
	instead of list.

2011-02-25  Murray Cumming  <murrayc@murrayc.com>

	Avoid GTK+ warning when clicking on the list button.

	* glom/mode_data/db_adddel/db_adddel.[h|cc]: on_cell_button_clicked(): 
	Delay the response to the click, to an idle handler, to avoid confusing 
	GtkTreeView, which was showing a warning with GTK+ 3 about a NULL GtkAdjustment.

2011-01-28  Murray Cumming  <murrayc@murrayc.com>

	Adapt to the gtkmm 3 change to using vectors.

	* glom/mode_data/datawidget/cellrenderer_dblist.cc:
	* glom/mode_data/db_adddel/db_adddel.cc:
	* glom/mode_design/layout/dialog_choose_field.cc:
	* glom/mode_design/print_layouts/print_layout_toolbar_button.cc:
	* glom/mode_design/print_layouts/window_print_layout_edit.h:
	* glom/utility_widgets/imageglom.cc:
	* glom/utility_widgets/layouttoolbarbutton.cc: Use std::vector instead of 
	std::list.
	* glom/dialog_existing_or_new.cc: This one even used the intermediate type 
	directly, showing how necessary this API change was.
	
2011-01-18  Murray Cumming  <murrayc@murrayc.com>

	Disable more deprecated API.

	* configure.ac: Add PANGO, PANGOMM, and CAIRO to the list.

2011-01-27  Murray Cumming  <murrayc@murrayc.com>

	Fix the build with gtkmm 2.23/24 with --enable-warnings=fatal.

  * configure.ac: Require the latest gtkmm-2.4 version.
	* glom/mode_design/dialog_add_related_table.cc:
	* glom/mode_design/fields/dialog_fielddefinition.cc:
	* glom/mode_design/script_library/dialog_script_library.cc:
	* glom/mode_design/users/dialog_choose_user.cc:
	* glom/mode_design/users/dialog_users_list.cc:
	* glom/utility_widgets/db_adddel/db_adddel.cc: More use of the non-deprecated 
	version of some methods.

2011-01-27  Murray Cumming  <murrayc@murrayc.com>

	GimpRuler: Use the GTK+-2.0 version of this code.
