@@ -42,7 +42,10 @@ libglom_d_b_view_includedir = $(libglom_d_bakery_includedir)/view
 libglom_d_b_view_include_HEADERS = $(libglom_d_b_view_headers)
 
 glom_libglom_libglom_@GLOM_ABI_VERSION@_la_SOURCES = $(libglom_sources)
-glom_libglom_libglom_@GLOM_ABI_VERSION@_la_LIBADD  = $(LIBGLOM_LIBS) $(PYTHON_LIBS) $(BOOST_PYTHON_LIBS)
+
+libglom_all_libs = $(LIBGLOM_LIBS) $(PYTHON_LIBS) $(BOOST_PYTHON_LIBS)
+glom_libglom_libglom_@GLOM_ABI_VERSION@_la_LIBADD = $(libglom_all_libs)
+
 if HOST_WIN32
 glom_libglom_libglom_@GLOM_ABI_VERSION@_la_LIBADD += -lws2_32
 endif
