@@ -51,8 +51,7 @@ dist_noinst_SCRIPTS = tests/test_dtd_file_validation.sh \
 
 #TESTS_ENVIRONMENT=which valgrind && valgrind --tool=memcheck --leak-check=full --leak-resolution=high --trace-children=yes --num-callers=30
 
-# This also links to the libraries in LIBGLOM_LIBS
-tests_ldadd = glom/libglom/libglom-$(GLOM_ABI_VERSION).la
+tests_ldadd = glom/libglom/libglom-$(GLOM_ABI_VERSION).la $(libglom_all_libs)
 
 glom_libglom_test_connectionpool_SOURCES = glom/libglom/test_connectionpool.cc
 glom_libglom_example_document_load_SOURCES = glom/libglom/example_document_load.cc
